css/master-solutions.webflow.css
/* ... */
.hero-split.header {
  width: auto;
  max-width: none;
  min-height: auto;
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0);
  padding: 0 10% 0 140px;
  position: relative;
}

.margin-bottom-24px {
  margin-bottom: 24px;
  padding-left: 0;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 16px;
  line-height: 26px;
}

.button-primary-2 {
  color: #fff;
  letter-spacing: 2px;
  text-transform: uppercase;
  background-color: #1a1b1f;
  padding: 12px 25px;
  font-size: 12px;
  line-height: 20px;
  transition: all .2s;
}

.button-primary-2:hover {
  color: #fff;
  background-color: #32343a;
}

.button-primary-2:active {
  background-color: #43464d;
}

.shadow-two {
  width: auto;
  height: auto;
  max-width: none;
  float: right;
  object-fit: cover;
  flex: 0 auto;
  order: 0;
  align-self: stretch;
  display: block;
  position: static;
  top: 0%;
  bottom: auto;
  left: 0%;
  right: 0;
  overflow: hidden;
  box-shadow: 0 4px 24px rgba(150, 163, 181, .08);
}

.heading-19 {
  color: #fff;
  margin-bottom: 0;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 36px;
  font-weight: 300;
  line-height: 48px;
}

.button-19 {
  background-color: #4a506d;
}

.collection-list-wrapper-3 {
  width: auto;
  max-width: 1000px;
  flex: 0 auto;
  order: 0;
  align-self: baseline;
  display: flex;
}

.image-17 {
  object-fit: fill;
  display: block;
  position: static;
  overflow: hidden;
}

.list {
  padding-left: 15px;
}

.heading-20 {
  color: #000;
  border: 1px rgba(0, 0, 0, .19);
  margin-top: 100px;
  font-family: Inter variablefont slnt wght, sans-serif;
}

.heading-20.algemeen {
  margin-top: 0;
}

.body-10 {
  background-color: #ecebeb;
}

._1 {
  object-fit: cover;
  position: static;
}

._2, ._5, ._6, ._7, ._0 {
  object-fit: cover;
}

.image-18 {
  display: none;
  overflow: visible;
}

.image-19 {
  width: 101%;
  height: 500px;
  max-width: none;
  object-fit: cover;
  flex: 1;
  order: 0;
  align-self: stretch;
  display: block;
  position: static;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
}

.div-block-45 {
  width: auto;
  max-width: none;
  object-fit: fill;
  flex-direction: row;
  flex: 1;
  order: 0;
  justify-content: center;
  align-self: stretch;
  display: flex;
  position: relative;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
}

.div-block-46 {
  height: 100%;
}

.div-block-47 {
  height: 700px;
}

.text-block-30 {
  max-width: 70%;
  justify-content: center;
  align-items: center;
  padding-left: 0;
  display: flex;
}

.div-block-48 {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
}

.rich-text-block-2 {
  padding-top: 20px;
  padding-left: 60px;
  padding-right: 60px;
  font-family: Inter variablefont slnt wght, sans-serif;
}

.rich-text-block-2 h4 {
  margin-top: 30px;
  margin-bottom: 10px;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-weight: 600;
}

.button-20 {
  color: #000;
  background-color: rgba(0, 0, 0, 0);
  margin-top: 50px;
  margin-left: 60px;
  padding-left: 0;
  display: inline-block;
}

.text-block-31 {
  text-align: left;
  flex-direction: column;
  justify-content: space-around;
  align-items: baseline;
  margin-bottom: 0;
  margin-right: 0;
  padding: 0 0 0 32px;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-style: normal;
  font-weight: 700;
  display: flex;
  position: absolute;
  top: 537px;
}

.heading-21 {
  margin-bottom: 0;
  padding-bottom: 0;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 24px;
  font-weight: 500;
}

.checkbox-field-2 {
  margin-bottom: 10px;
}

.link-block-2, .link-block-3, .link-block-4, .link-block-5 {
  text-decoration: none;
}

.image-20 {
  display: inline-block;
}

.div-block-49 {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  border-bottom-right-radius: 10px;
  grid-template-rows: auto;
  grid-template-columns: 1fr .75fr;
  grid-auto-columns: 1fr;
  grid-auto-flow: row dense;
  justify-content: center;
  align-items: stretch;
  justify-items: center;
  margin-left: 70px;
  margin-right: 70px;
  display: grid;
}

.div-block-50 {
  color: #121111;
  background-color: #1b2035;
  border: 1px solid rgba(137, 137, 137, 0);
  border-radius: 0 0 60px;
}

.container-12 {
  flex-direction: row;
  padding-left: 0;
  display: block;
}

.heading-22 {
  color: #fff;
  margin-top: 100px;
  margin-left: 60px;
  margin-right: 60px;
  padding-left: 0;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-weight: 200;
}

.text-block-32 {
  color: #fff;
  margin-left: 60px;
  margin-right: 60px;
  padding-bottom: 20px;
  padding-left: 0;
  font-size: 16px;
  line-height: 26px;
  position: static;
}

.button-21 {
  text-align: center;
  object-fit: fill;
  background-color: #c2831a;
  border-top: 1px solid rgba(255, 255, 255, .35);
  border-radius: 2px;
  margin-left: 60px;
  margin-right: 60px;
  padding-left: 15px;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-weight: 700;
  text-decoration: none;
  display: block;
  box-shadow: 0 4px 4px rgba(0, 0, 0, .15);
}

.text-block-33 {
  font-size: 32px;
}

.text-block-34, .text-block-35 {
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 32px;
  line-height: 44px;
}

.div-block-51 {
  margin-top: 60px;
  margin-bottom: 60px;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 32px;
  font-weight: 300;
  line-height: 44px;
}

.heading-23 {
  text-align: center;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 48px;
  font-weight: 400;
  line-height: 97px;
}

.body-11 {
  background-color: #ecebeb;
}

.text-block-36 {
  align-self: center;
  font-family: Inter variablefont slnt wght, sans-serif;
  font-size: 18px;
}
/* ... */

